--- a/index.html
+++ b/index.html
@@ -1,209 +1,106 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>QWerty</title>
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<style>
-body{
-background-color:#9c9f84;
-margin:0px;
-font-family:verdana,georgia,serif;
-font-size:14px;
-
-}
-#header{
-background-color:#5c755e;
-margin:10px;
-height:90px;
-border-radius:5px;
-}
-h1{
-font-size:120%;
-color:#ce282e;
-}
-#navbar
-{
-    margin-top:5px
-    border-radius:10px;
-    
-}
-
-#navbar ul
-{
-    list-style:none;
-    position:relative;
-    float:left;
-    margin:5px;
-    padding:0
-}
-
-#navbar ul a
-{
-    display:block;
-    color:#333;
-    text-decoration:none;
-    font-weight:700;
-    font-size:12px;
-    line-height:32px;
-    padding:0 15px;
-    font-family:"HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif;
-}
-
-#navbar ul li
-{
-    position:relative;
-    float:left;
-    margin:0;
-    padding:0
-}
-
-#navbar ul li.current-menu-item
-{
-    background:#ddd;
-    margin-left:10px;
-}
-
-#navbar ul li:hover
-{
-    background:#f6f6f6;
-}
-
-#navbar ul ul
-{
-display:none;
-    position:absolute;
-    top:100%;
-    left:0;
-    background-color:#fff;
-    padding:0
-}
-
-#navbar ul ul li
-{
-    float:none;
-    width:200px
-}
-
-#navbar ul ul a
-{
-    line-height:120%;
-    padding:10px 15px
-}
-#navbar ul li:hover > ul
-{
-    display:block
-}
-
-.main{
-background-color:#e5e4d7;
-margin-left:10px;
-margin-right:100px;
-margin-top:10px;
-margin-bottom:10px;
-border-radius:5px;
-font-size:100%;
-padding:5px;
-}
-.imgsidebar{
-margin-left:10px;
-margin-right:10px;
-margin-top:0px;
-margin-bottom:10px;
-width:90px;
-float:right;
-clear:right;
-opacity:1.0;
-transition:opacity 2s ease-in-out;
-}
-imgsidebar:hover{
-opacity:0.4;
-}
-.sideright{
-background-color:#e5e4d7;
-margin-left:10px;
-margin-right:10px;
-margin-top:0px;
-margin-bottom:10px;
-border-radius:5px;
-font-size:100%;
-padding:5px;
-float:right;
-clear:right;
-}
-h2{
-font-size:120%;
-color:darkblue;
-text-transform:capitalize;
-}
-h3{
-text-align:center;
-color:#fff;
-font-family:sans serif,Arial;
-position:relative;
-top:30%;
-font-size:200%;
-} /*
-.main p{ 
-    text-indent:30px;
-    text-align:justify;
-} */
-#footer{
-background-color:#5c755e;
-margin:10px;
-height:60px;
-border-radius:5px;
-clear:both;
-color:#efe5d0;
-text-align:center;
-padding:5px;
-font-size:90%;
-}
-#footer ul{
-text-align:center;
-list-style-type:none;
-padding:0px;
-}
-#footer ul li{
-display:inline;
-}
-#footer ul li a{
-text-decoration:none;
-font-family:arial;
-padding:1.8%;
-color:#fff;
-border-radius:5px;
-text-transform:capitalize;
-}
-#footer ul li a:hover{
-color:#5c775e;
-background-color:#fff;
-}
-
-</style>
-</head>
-<body>
-<div id="header">
-<h3> Hello World</h3>
-</divascading>
-<div class="main">
-<h1>QWerty</h1>
-<p>Hello, I am QWerty a 16 years old male from the Netherlands
-    I like coffee and other things I can speak Some languages being English my 5th/6th language.</p>
-    <p>I like science and coding I currently know Python for Applied science
-        and JavaScript I am also the type of guy who you can't talk about coding
-        cause I just code without thinking. lol</p>
-        <p>I also like to code bots but I just have a bad host for multiple servers
-            I also like to contribute in GitHubs on my account I use for contributions.
-
-        </p> <p> This Website is still in development so you will see some changes in content and anything like domain name. Check out these 3 games I made with HTML <a href="Bee Game">https://notazerty.github.io/game/bee.html</a> , <a href="Snake Game">https://notazerty.github.io/game/snake</a> 
-        and <a href="A Word Game">https://notazerty.github.io/game/wordo.html</a>
-    </p>           
- </div>
-
-<div id="footer"> 
-&copy; Zach 2022-2022
-<ul>
-</ul>
-</div>
-</body>
+<html lang="en" prefix="og: https://ogp.me/ns#">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta property="og:title" content="Rauf Islam (ItsRauf)" />
+    <meta property="og:description" content="Hi! I'm Rauf, your not so average person who likes to do it all." />
+    <meta property="og:image" content="assets/avatar.png" />
+    <meta name="theme-color" content="#956ff8">
+    <meta name="twitter:card" content="summary">
+    <title>Rauf Islam</title>
+    <link rel="stylesheet" href="src/styles.css" />
+  </head>
+  <body class="main hide-native-scrollbar">
+    <div class="br-replace"></div>
+    <div class="container">
+      <img
+        src="assets/avatar.png"
+        width="300px"
+        alt="rauf"
+        loading="lazy"
+      />
+      <div class="br-replace"></div>
+      <p id="name">rauf islam</p>
+      <p id="pronouns_age">he/him -</p>
+      <div class="br-replace"></div>
+      <p id="descriptorStart">not your average <p id="descriptor"></p></p>
+      <div class="br-replace"></div>
+      <!-- <div class="container" id="spotifyNowPlaying">
+        <div id="spotifyPlayingImageDiv">
+          <img id="spotifyPlayingImage" width="64px">
+        </div>
+        <div class="container" id="spotifyText">
+          <p id="spotifyLabel">Spotify</p>
+          <p id="spotifyTextArtist"></p>
+          <p id="spotifyTextTitle"></p>
+          <p id="spotifyTextAlbum"></p>
+        </div>
+      </div>
+      <div class="br-replace"></div>
+      <div class="container" id="githubProfile">
+        <div id="githubProfileImageDiv">
+          <img id="githubProfileImage" width="64px">
+        </div>
+        <div class="container" id="githubText">
+          <p id="githubLabel">Github</p>
+          <p id="githubUsername"></p>
+          <p id="githubBio"></p>
+          <p id="githubCompany"></p>
+        </div>
+      </div> -->
+      <div class="br-replace"></div>
+      <div class="container links">
+        <div id="socials">
+          <div class="container-no-vertical links">
+            <p>social media:</p>
+            <a href="https://twitter.com/itsrauf_" id="twitter">twitter: @itsrauf_</a>
+            <a href="https://instagram.com/itsrauf_" id="instagram">
+              instagram: @itsrauf_
+            </a>
+            <a href="http://be.net/itsrauf" id="behance">behance: itsrauf</a>
+            <a href="https://dev.to/itsrauf">dev.to: @itsrauf</a>
+            <a
+              href="https://www.youtube.com/channel/UCFqd_VkM_ydgDjuvRxAMh3Q"
+              id="youtube"
+            >
+              youtube: Rauf
+            </a>
+          </div>
+          <div class="container-no-vertical links">
+            <p>music:</p>
+            <a
+              href="https://open.spotify.com/artist/6Ko05GhMLMalD5Abnk2wR9"
+              id="spotify"
+            >
+              spotify: Rauf
+            </a>
+            <a href="https://soundcloud.com/itsrauf" id="soundcloud">
+              soundcloud: itsrauf
+            </a>
+            <a
+              href="https://music.apple.com/us/artist/rauf/954630205"
+              id="applemusic"
+            >
+              apple music: Rauf
+            </a>
+          </div>
+          <div class="container-no-vertical links">
+            <p>coding:</p>
+            <a href="https://github.com/ItsRauf" id="github">github: @itsrauf</a>
+            <a href="https://gitlab.com/ItsRauf" id="gitlab">gitlab: @ItsRauf</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="br-replace"></div>
+    <div class="br-replace"></div>
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
+    <script src="https://unpkg.com/dayjs@1.8.21/plugin/relativeTime.js"></script>
+    <script>
+      dayjs.extend(window.dayjs_plugin_relativeTime)
+    </script>
+    <script src="src/index.js"></script>
+  </body>
 </html>
